--- a/client/src/styles/indexStyle.css
+++ b/client/src/styles/indexStyle.css
@@ -21,8 +21,24 @@
         position: absolute;
         min-height: 100vh;
         min-width: 100%;
-        background-color: black;
-        opacity: 0.7;
+        background-color: hsla(70, 35%, 0%, 0.50);
+        opacity: 1;
         top: 0;
+    }
+    textarea:focus, input:focus{
+        outline: none;
+    }
+    textarea {
+        resize: none;
+    }
+
+    [contenteditable]:focus {
+        outline: 0px solid transparent;
+    }
+    .navbar {
+        height: 5vh;
+    }
+    .wrapper {
+        height: 94vh;
     }
 }   
